# stock-trek-check

./: Cargo.toml  README.md
.github/prompts/: address-issue.txt  classify-request.txt  classify-response.txt
.github/schemas/: request-classification.json
.github/workflows/: agent.yml  test-and-tag.yml  test-tag-and-publish.yml  test.yml
example/: run_algorithm.rs
src/: algorithm.rs  asset_id.rs  capability.rs  context.rs  error.rs  example.rs  exchange_id.rs  file_existence_verifier.rs  lib.rs  main.rs  node_location.rs  path_util.rs  policy.rs  preferences.rs  resolved_context.rs  resolver_context.rs  scratch_pad.rs  signal_context.rs  strategy.rs  strategy_context.rs  syntax_verifier.rs  verifier_map.rs  verify.rs
src/actions/: action.rs  actions.rs  actions_factory.rs  mod.rs  order_request_action.rs
src/commands/: command.rs  command_factory.rs  enqueue_order_command.rs  if_command.rs  list_command.rs  mod.rs  no_op_command.rs
src/conditions/: compare_condition.rs  condition.rs  condition_factory.rs  has_account_in_exchange_condition.rs  mod.rs  not_condition.rs  owns_asset_condition.rs  owns_asset_in_exchange_condition.rs  quantity_of_condition.rs  signal_condition.rs
src/error/: general.rs  mod.rs  portfolio.rs  result.rs  stats.rs  value.rs  verification.rs
src/examples/: cost_averaging.rs
src/exchanges/: client_order_id.rs  exchange.rs  exchanges_factory.rs  in_memory_exchange.rs  mod.rs  stub_exchange.rs
src/execute/: capability.rs  exchange_adapter.rs  exchanges.rs  executor.rs  executor_factory.rs  increment_sizes.rs  mod.rs  stub_executor.rs
src/market_data/: extract.rs  market_order_book.rs
src/order/: mod.rs  order_activation.rs  order_constraint.rs  order_factory.rs  order_id.rs  order_intent.rs  order_preferences.rs  order_price_basis.rs  order_pricing.rs  order_quantity.rs  order_request.rs  order_response.rs  order_side.rs  order_status.rs  order_time_in_force.rs  order_timing.rs  order_trigger_direction.rs  order_trigger_mode.rs  single_order.rs  trading_pair.rs
src/portfolios/: in_memory_portfolio.rs  mod.rs  portfolio.rs  portfolios_factory.rs  stub_portfolio.rs
src/predicates/: compare_predicate.rs  has_account_in_exchange_predicate.rs  mod.rs  not_predicate.rs  owns_asset_in_exchange_predicate.rs  owns_asset_predicate.rs  predicate.rs  predicates.rs  predicates_factory.rs  quantity_of_predicate.rs  scratch_pad_predicate.rs
src/resolvers/: action_resolver.rs  enqueue_order_resolver.rs  if_resolver.rs  list_resolver.rs  mod.rs  no_op_resolver.rs  (+6 more)
(+57 files in other folders)
