[package]
name = "stock-trek"
version = "0.7.0"
edition = "2021"
description = "Stock Trek time-series analysis"
authors = ["stock-trek.com <stock-trek@proton.me>"]
license = "MIT"
repository = "https://github.com/Stock-Trek/stock-trek"
readme = "README.md"
categories = ["finance", "mathematics"]
keywords = [
  "indicators",
  "ohlcv",
  "statistics",
  "timeseries",
]

[lib]
name = "stock_trek"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
larpa = "0.1.1"
num-complex = "0.4.6"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
rust_decimal = "1.42.0"
serde = "1.0.228"
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
syn = { version = "2.0.117", features = ["visit"] }
table_enum = "0.3.0"
thiserror = "1.0"
traitreg = "0.4.0"
typetag = "0.2.21"
typify = "0.6.1"
uuid = { version = "1.23.0", features = ["serde", "v4"] }

[lints.clippy]
new_ret_no_self = "allow"
too_many_arguments = "allow"
