[package]
name = "stock-trek-check"
version = "0.1.2"
edition = "2024"
description = "Code verification for Stock-Trek algorithms"
authors = ["stock-trek.com <stock-trek@proton.me>"]
license = "MIT"
repository = "https://github.com/Stock-Trek/stock-trek-check"
readme = "README.md"
keywords = [
  "code-checker",
  "linter",
  "static-analysis",
  "syntax-checker",
  "verification"
]

[[bin]]
name = "stock-trek-check"
path = "src/main.rs"

[dependencies]
larpa = "0.1.1"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
strum = { version = "0.28.0", features = ["derive"] }
syn = { version = "2.0.117", features = ["full", "visit"] }
